# DCAToolBox

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  pages.yml
dcatoolbox/: __init__.py
dcatoolbox/backtesting/: __init__.py  context.py  engine.py  result.py  runner.py
dcatoolbox/broker/: __init__.py  broker.py  orders.py
dcatoolbox/config/: __init__.py  enums.py  io.py  settings.py
dcatoolbox/data/: __init__.py  cache.py  factory.py  models.py  validation.py
dcatoolbox/data/providers/: __init__.py  base.py  bloomberg_provider.py  csv_provider.py  synthetic_provider.py  yahoo_provider.py
dcatoolbox/metrics/: __init__.py  performance.py  returns.py
dcatoolbox/optimization/: __init__.py  grid_search.py  splitter.py
dcatoolbox/portfolio/: __init__.py  portfolio.py  position.py
dcatoolbox/reports/: __init__.py  generator.py  pdf.py  text.py
dcatoolbox/strategies/: __init__.py  adaptive_momentum.py  base.py  budget_deployment.py  builtin.py  dip_buying.py  indicators.py  momentum.py  monthly_dca.py  moving_average_strategy.py  registry.py  rsi_strategy.py  signal_deploy.py  smart_deploy.py  trend_filter.py
dcatoolbox/strategies/signals/: __init__.py  base.py  price_signals.py
dcatoolbox/utils/: __init__.py  calendar.py  decorators.py  logging.py
dcatoolbox/visualization/: __init__.py  charts.py
docs/: BBG_SIGNALS_TAB_PROMPT.md  BLOOMBERG_DATA_REQUEST.md  CONCEPTION_STRATEGIE.md  INVESTIGATION_PROMPT.md  INVESTIGATION_VERDICT.md  STREAMLIT_LAB_PROMPT.md  STREAMLIT_PAGE_PROMPT.md
examples/: example_config.yaml  quickstart.py
scripts/: build_site.py  bundle_data.py  gen_golden.py  gen_specs.py  import_bloomberg.py  macro_signals_experiment.py  research.py  signal_lab.py  vix_ts_experiment.py
tests/: conftest.py  test_adaptive_momentum.py  test_broker.py  test_calendar.py  test_config.py  test_data.py  test_engine.py  test_factory_extra.py  test_indicators_bonus.py  test_metrics.py  test_momentum_trend.py  test_optimization.py  test_portfolio.py  test_reports_viz.py  test_signals.py  test_smart_deploy.py  test_strategies.py
web/: app.js  engine.js  engine.test.mjs  index.html  styles.css
