[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcatoolbox"
version = "0.1.0"
description = "A professional, extensible quantitative research framework for Dollar-Cost-Averaging (DCA) investment strategies."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Anthony Nadjari", email = "nadjari.anthony@gmail.com" }]
keywords = ["dca", "backtesting", "quant", "finance", "investing", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "yfinance>=0.2.40",
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "loguru>=0.7",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = ["streamlit>=1.33"]
report = ["jinja2>=3.1", "kaleido>=0.2.1"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
dcatoolbox = "main:app"

[project.urls]
Homepage = "https://github.com/AnthonyNadjari/DCAToolBox"
Repository = "https://github.com/AnthonyNadjari/DCAToolBox"
Issues = "https://github.com/AnthonyNadjari/DCAToolBox/issues"

[tool.setuptools.packages.find]
include = ["dcatoolbox*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RET", "D"]
# D105: magic-method docstrings are unnecessary noise.
# B027: empty non-abstract methods are intentional override hooks (Strategy.reset).
# UP047: PEP 695 generic syntax is 3.12-only and hurts readability of decorators.
ignore = ["D203", "D213", "D107", "D105", "B027", "UP047"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101"]
# typer.Option(...) in argument defaults is the documented, idiomatic CLI pattern.
"main.py" = ["B008"]
"app.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["dcatoolbox"]
omit = ["*/visualization/*", "*/reports/*", "dcatoolbox/data/providers/bloomberg_provider.py"]
